[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgaug"
version = "1.0.2"
dependencies = [
    "six",
    "numpy",
    "scipy",
    "Pillow",
    "matplotlib",
    "scikit-image",
    "opencv-python-headless",
    "imageio",
    "Shapely",
    "numba",
]

[tool.setuptools.packages.find]
where = ["."]